docs/sf-export/sfdx-raw/objects/Agent_Monthly_Tier__c/Agent_Monthly_Tier__c.object-meta.xml
<CustomObject>
    <label>Agent Monthly Tier</label>
    <nameField>
        <displayFormat>AMT-{000000}</displayFormat>
        <label>Agent Monthly Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Monthly Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>