docs/sf-export/sfdx-raw/objects/Agent_Monthly_Tier__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agent_Monthly_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>