docs/sf-export/sfdx-raw/objects/Agent_Monthly_Tier__c/fields/Is_Active_Prev_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Prev_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Prev Month</label>
    <type>Checkbox</type>
</CustomField>