docs/sf-export/sfdx-raw/objects/Agent_Monthly_Tier__c/fields/Record_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Record_Updated_By__c</fullName>
    <label>Record Updated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>