docs/sf-export/sfdx-raw/objects/Agent_Monthly_Tier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closer__c</columns>
    <columns>Is_Active_Prev_Month__c</columns>
    <columns>Active__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Total_Debt_Amount__c</columns>
    <columns>Tier__c</columns>
    <columns>Calculation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>